--- a/return.html
+++ b/return.html
@@ -2,13 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Return - Ash Turner</title>
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/project.css" />
 
-    <link rel="icon" type="image/png" href="images/star.png" />
+    <!-- For IE 9 and below -->
+    <!--[if IE
+      ]><link rel="shortcut icon" href="images/favicon-32.ico"
+    /><![endif]-->
+
+    <!-- Touch Icons - iOS and Android 2.1+ -->
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      href="images/favicon-180.png"
+    />
+
+    <!-- Firefox, Chrome, Safari, IE 11+ and Opera -->
+    <link rel="icon" type="image/png" href="images/favicon-196.png" />
   </head>
   <body>
     <div id="main-page">
