Optimize and replace images

--- a/david.html
+++ b/david.html
@@ -68,13 +68,13 @@
       <div class="gallery-container custom-grid-david-1 padded-row">
         <button class="zoomable">
           <img
-            src="images/david-1.png"
+            src="images/david-1.jpg"
             alt="View full size version of paper items laid out, including post-its and writing"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/david-2.png"
+            src="images/david-2.jpg"
             alt="View full size version of hobby items and books laid out"
           />
         </button>
@@ -102,7 +102,7 @@
         </button>
         <button class="zoomable">
           <img
-            src="images/david-6.png"
+            src="images/david-6.jpg"
             alt="View full size version of laid-out books, post-its, letters and lock box"
           />
         </button>
@@ -123,19 +123,19 @@
         </button>
         <button class="zoomable">
           <img
-            src="images/david-9.JPG"
+            src="images/david-9.jpg"
             alt="View full size version of sticky notes on a concrete wall"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/david-10.JPG"
+            src="images/david-10.jpg"
             alt="View full size version of bookshelf with photo on top"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/david-11.JPG"
+            src="images/david-11.jpg"
             alt="View full size version of books sitting on the floor next to a bookshelf"
           />
         </button>
@@ -174,13 +174,13 @@
         </div>
         <div class="slide">
           <img
-            src="images/david-1.png"
+            src="images/david-1.jpg"
             alt="Bird's-eye view of post-its and crumpled paper laid out and facing up. A yellow post-it reads a gmail name and password, with the text 'You're such a dork! (but I love you) scribbled in the corner.' Another note reads, 'Try to talk to Sarah', and another one contains a 3 bullet to-do list"
           />
         </div>
         <div class="slide">
           <img
-            src="images/david-2.png"
+            src="images/david-2.jpg"
             alt="Bird's-eye view of items laid out and facing up. Items include a pink monkey, various mystery and sci-fi books, two framed photos of a guy with his friends, a rock collection, a toy robot, and a hand-held video camera"
           />
         </div>
@@ -204,7 +204,7 @@
         </div>
         <div class="slide">
           <img
-            src="images/david-6.png"
+            src="images/david-6.jpg"
             alt="Bird's-eye view of laid-out books, post-its, letters and lock box. A stack of letters has a closed note on top with a drawn heart and the name 'David' written on the front. Post-its with inspirational quotes are laid out, as well as sci-fi books with post-its on their covers that contain positive notes about each book"
           />
         </div>
@@ -222,19 +222,19 @@
         </div>
         <div class="slide">
           <img
-            src="images/david-9.JPG"
+            src="images/david-9.jpg"
             alt="Sticky notes on a concrete wall. The top reads, 'Keep Moving forward!' The bottom left lists 'Finish Work. Get card activated. Call mom.' The bottom right note lists, 'Write it out. Do something I enjoy. Keep your distance. Leave the house'"
           />
         </div>
         <div class="slide">
           <img
-            src="images/david-10.JPG"
+            src="images/david-10.jpg"
             alt="Top-half of a bookshelf. A framed photo of people dressed up and posing sits on top. On the shelf are stacked sci-fi books, a toy robot and rubber ducky, a couple of sticky notes and a handheld video camera"
           />
         </div>
         <div class="slide">
           <img
-            src="images/david-11.JPG"
+            src="images/david-11.jpg"
             alt="Bottom-half of a bookshelf. Next to it on the floor is a stack of books and a box of a model Star Trek spaceship. On the shelf are books about space, games and theatrical design. On the bottom shelf is a lockbox"
           />
         </div>
