--- a/draw-this.html
+++ b/draw-this.html
@@ -34,7 +34,7 @@
       <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2016-11-13_01_Kjeungskj%C3%A6r_Lighthouse,_S%C3%B8r-Tr%C3%B8ndelag,_Norway.jpg -->
       <button class="main-image zoomable">
         <img
-          src="images/drawthis-hero.png"
+          src="images/drawthis-hero.jpg"
           alt="View full size version of app screenshot with a lighthouse photo"
         />
       </button>
@@ -95,56 +95,56 @@
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2016-11-13_01_Kjeungskj%C3%A6r_Lighthouse,_S%C3%B8r-Tr%C3%B8ndelag,_Norway.jpg -->
         <button class="zoomable">
           <img
-            src="images/drawthis-2.png"
+            src="images/drawthis-2.jpg"
             alt="View full size version of app screenshot with a lighthouse photo"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:20180127_FIS_NC_WC_Seefeld_Sophie_Caldwell_850_1151.jpg -->
         <button class="zoomable">
           <img
-            src="images/drawthis-3.png"
+            src="images/drawthis-3.jpg"
             alt="View full size version of app screenshot with photo of skier"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Anfiteatro_de_Pula,_Croacia,_2017-04-17,_DD_13-18_HDR_PAN.jpg -->
         <button class="zoomable">
           <img
-            src="images/drawthis-4.png"
+            src="images/drawthis-4.jpg"
             alt="View full size version of app screenshot with photo of Colosseum"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Abfertigen_einer_Meldung_durch_Brieftauben_-_CH-BAR_-_3240471_-_restoration.jpg -->
         <button class="zoomable">
           <img
-            src="images/drawthis-5.png"
+            src="images/drawthis-5.jpg"
             alt="View full size version of app screenshot with black-and-white photograph of soldiers"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Buddhist_monks_cleaning_the_yard_at_Wat_Xieng_Thong_temple.jpg -->
         <button class="zoomable">
           <img
-            src="images/drawthis-6.png"
+            src="images/drawthis-6.jpg"
             alt="View full size version of app screenshot with a Buddhist temple photograph"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Boys_playing_street_football_in_Egypt.jpg -->
         <button class="zoomable">
           <img
-            src="images/drawthis-7.png"
+            src="images/drawthis-7.jpg"
             alt="View full size version of app screenshot with an image of boys playing soccer"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2019_-_Parc_national_des_Pyrenees_-_refuge_des_Espuguettes.jpg -->
         <button class="zoomable">
           <img
-            src="images/drawthis-8.png"
+            src="images/drawthis-8.jpg"
             alt="View full size version of app screenshot with a photo of a house overlooking a mountain range"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Banaue_Philippines_Ifugao-Tribesman-01.jpg -->
         <button class="zoomable">
           <img
-            src="images/drawthis-9.png"
+            src="images/drawthis-9.jpg"
             alt="View full size version of app screenshot with an image of a crouching, older Filipino man "
           />
         </button>
@@ -178,7 +178,7 @@
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2016-11-13_01_Kjeungskj%C3%A6r_Lighthouse,_S%C3%B8r-Tr%C3%B8ndelag,_Norway.jpg -->
         <div class="slide">
           <img
-            src="images/drawthis-hero.png"
+            src="images/drawthis-hero.jpg"
             alt="View full size version of app screenshot with a lighthouse photo"
           />
         </div>
@@ -191,56 +191,56 @@
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2016-11-13_01_Kjeungskj%C3%A6r_Lighthouse,_S%C3%B8r-Tr%C3%B8ndelag,_Norway.jpg -->
         <div class="slide">
           <img
-            src="images/drawthis-2.png"
+            src="images/drawthis-2.jpg"
             alt="View full size version of app screenshot with a lighthouse photo"
           />
         </div>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:20180127_FIS_NC_WC_Seefeld_Sophie_Caldwell_850_1151.jpg -->
         <div class="slide">
           <img
-            src="images/drawthis-3.png"
+            src="images/drawthis-3.jpg"
             alt="View full size version of app screenshot with photo of skier"
           />
         </div>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Anfiteatro_de_Pula,_Croacia,_2017-04-17,_DD_13-18_HDR_PAN.jpg -->
         <div class="slide">
           <img
-            src="images/drawthis-4.png"
+            src="images/drawthis-4.jpg"
             alt="View full size version of app screenshot with photo of Colosseum"
           />
         </div>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Abfertigen_einer_Meldung_durch_Brieftauben_-_CH-BAR_-_3240471_-_restoration.jpg -->
         <div class="slide">
           <img
-            src="images/drawthis-5.png"
+            src="images/drawthis-5.jpg"
             alt="View full size version of app screenshot with black-and-white photograph of soldiers"
           />
         </div>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Buddhist_monks_cleaning_the_yard_at_Wat_Xieng_Thong_temple.jpg -->
         <div class="slide">
           <img
-            src="images/drawthis-6.png"
+            src="images/drawthis-6.jpg"
             alt="View full size version of app screenshot with a Buddhist temple photograph"
           />
         </div>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Boys_playing_street_football_in_Egypt.jpg -->
         <div class="slide">
           <img
-            src="images/drawthis-7.png"
+            src="images/drawthis-7.jpg"
             alt="View full size version of app screenshot with an image of boys playing soccer"
           />
         </div>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2019_-_Parc_national_des_Pyrenees_-_refuge_des_Espuguettes.jpg -->
         <div class="slide">
           <img
-            src="images/drawthis-8.png"
+            src="images/drawthis-8.jpg"
             alt="View full size version of app screenshot with a photo of a house overlooking a mountain range"
           />
         </div>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Banaue_Philippines_Ifugao-Tribesman-01.jpg -->
         <div class="slide">
           <img
-            src="images/drawthis-9.png"
+            src="images/drawthis-9.jpg"
             alt="View full size version of app screenshot with an image of a crouching, older Filipino man "
           />
         </div>
