--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
       <div class="gallery-container large-block-space">
         <button class="zoomable">
           <img
-            src="images/home-1.png"
+            src="images/home-1.jpg"
             alt="View full size version of a blue page with columns of 0s and 1s"
           />
         </button>
@@ -93,7 +93,7 @@
         </button>
         <button class="zoomable">
           <img
-            src="images/home-4.png"
+            src="images/home-4.jpg"
             alt="View full size version of a page with columns of text on it"
           />
         </button>
@@ -138,7 +138,7 @@
         </button>
         <button class="zoomable">
           <img
-            src="images/home-11.png"
+            src="images/home-11.jpg"
             alt="View full size version of two-page spread of text with a red line running through"
           />
         </button>
@@ -156,7 +156,7 @@
         </button>
         <button class="zoomable">
           <img
-            src="images/home-14.png"
+            src="images/home-14.jpg"
             alt="View full size version of two-page spread of columns of text and code with large yellow letters reading, 'Science and Creation' laid over top"
           />
         </button>
@@ -168,7 +168,7 @@
         </button>
         <button class="zoomable">
           <img
-            src="images/home-16.png"
+            src="images/home-16.jpg"
             alt="View full size version of two-page spread of 0s and 1s in columns with large yellow text reading, 'In the Code' laid over top"
           />
         </button>
@@ -201,7 +201,7 @@
         <button class="close" aria-label="Close dialog">&times;</button>
         <div class="slide">
           <img
-            src="images/home-1.png"
+            src="images/home-1.jpg"
             alt="Blue page with columns of white 0s and 1s in groups of 8. Two groupings, '00100000' and '01101111' are yellow"
           />
         </div>
@@ -219,7 +219,7 @@
         </div>
         <div class="slide">
           <img
-            src="images/home-4.png"
+            src="images/home-4.jpg"
             alt="Page with columns of text and annotations. Text interspersed underneath the columns reads, 'Cyberspace consists of transactions, relationships, and thought itself.' In the columns, the text talks about how the human mind uses association for organizing and storing thoughts, and how mechanical records could work similarly in the future and allow for a private file system that could be called the 'memex'. Two parts of text in the columns are red, underlined, and linked to cut-off text box annotations, including the phrase, 'Selection by association' which is linked to a definition of hypertext, and 'mechanized private file and library', which is linked to the definition for a computer"
           />
         </div>
@@ -261,7 +261,7 @@
         </div>
         <div class="slide">
           <img
-            src="images/home-11.png"
+            src="images/home-11.jpg"
             alt="Two-page spread. A red line runs through the middle of both pages. On the left page is the text, 'Ours is a world that is both'. The right page has the word 'everywhere' repeated in columns, filling up the page"
           />
         </div>
@@ -279,7 +279,7 @@
         </div>
         <div class="slide">
           <img
-            src="images/home-14.png"
+            src="images/home-14.jpg"
             alt="Two-page spread of text that explains how to code a program that prints 'Hello World' in Java. Overtop the text are large yellow letters reading, 'Science and Creation'"
           />
         </div>
@@ -291,7 +291,7 @@
         </div>
         <div class="slide">
           <img
-            src="images/home-16.png"
+            src="images/home-16.jpg"
             alt="Two-page spread of 0s and 1s in columns. Two groupings, '00100000' and '01101111' are yellow. On the right page, large yellow text is laid over top, reading, 'In the Code'"
           />
         </div>
