--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div id="projects" class="projects-container large-block-space">
         <div class="filter-option" data-filter="code">
           <a href="./draw-this.html">
-            <img src="./images/landing-drawthis.png" alt="" width="250px" />
+            <img src="./images/landing-drawthis.jpg" alt="" width="250px" />
             <span class="underline">
               <span class="underline-mask long-animation">
                 Draw This!
@@ -100,7 +100,7 @@
         </div>
         <div class="filter-option" data-filter="game art">
           <a href="scrap-yard.html">
-            <img src="./images/landing-scrapyard.png" alt="" width="250px" />
+            <img src="./images/landing-scrapyard.jpg" alt="" width="250px" />
             <span class="underline">
               <span class="underline-mask long-animation">
                 Scrap Yard
@@ -133,7 +133,7 @@
         </div>
         <div class="filter-option" data-filter="code">
           <a href="hello.html">
-            <img src="./images/landing-helloworld.png" alt="" width="250px" />
+            <img src="./images/landing-helloworld.jpg" alt="" width="250px" />
             <span class="underline">
               <span class="underline-mask med-animation">
                 Hello
@@ -167,7 +167,7 @@
         </div>
         <div class="filter-option" data-filter="game">
           <a href="./david.html">
-            <img src="./images/landing-david.png" alt="" width="250px" />
+            <img src="./images/landing-david.jpg" alt="" width="250px" />
             <span class="underline">
               <span class="underline-mask long-animation">
                 In David's Absence
