--- a/return.html
+++ b/return.html
@@ -31,7 +31,7 @@
       <div class="project-subtitle-no-space">Made with: Unity C#</div>
       <div class="project-subtitle">Roles: Programming, Game Design</div>
 
-      <video class="main-image" controls poster="./images/return-poster.png">
+      <video class="main-image" controls poster="./images/return-poster.jpg">
         <source src="./videos/return.mp4" type="video/mp4" />
       </video>
       <p class="small-block-space">
