--- a/scrap-yard.html
+++ b/scrap-yard.html
@@ -46,19 +46,19 @@
       <div class="gallery-container large-block-space">
         <button class="zoomable">
           <img
-            src="images/scrapyard-1.png"
+            src="images/scrapyard-1.jpg"
             alt="View full size version of a child moving a Scrap Yard game piece across a board"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/scrapyard-2.png"
+            src="images/scrapyard-2.jpg"
             alt="View full size version of children playing Scrap Yard and holding game money"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/scrapyard-3.png"
+            src="images/scrapyard-3.jpg"
             alt="View full size version of a child handing game money to another above a Scrap Yard board"
           />
         </button>
@@ -113,7 +113,7 @@
         </button>
         <button class="zoomable">
           <img
-            src="images/scrapyard-8.png"
+            src="images/scrapyard-8.jpg"
             alt="View full size version of a black version of the Scrap Yard game board"
           />
         </button>
@@ -205,13 +205,13 @@
           <img src="images/scrapyard-hero.jpg" />
         </div>
         <div class="slide">
-          <img src="images/scrapyard-1.png" />
+          <img src="images/scrapyard-1.jpg" />
         </div>
         <div class="slide">
-          <img src="images/scrapyard-2.png" />
+          <img src="images/scrapyard-2.jpg" />
         </div>
         <div class="slide">
-          <img src="images/scrapyard-3.png" />
+          <img src="images/scrapyard-3.jpg" />
         </div>
         <div class="slide">
           <img src="images/scrapyard-4.jpg" />
@@ -236,7 +236,7 @@
         </div>
         <div class="slide">
           <img
-            src="images/scrapyard-8.png"
+            src="images/scrapyard-8.jpg"
             alt="View full size version of a black version of the Scrap Yard game board"
           />
         </div>
