--- a/storylines.html
+++ b/storylines.html
@@ -111,37 +111,37 @@
       <div class="gallery-container large-block-space">
         <button class="zoomable">
           <img
-            src="images/storylines-6.png"
+            src="images/storylines-6.jpg"
             alt="View full size version of people talking, with one holding a phone"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/storylines-7.png"
+            src="images/storylines-7.jpg"
             alt="View full size version of people talking while holding phones"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/storylines-8.png"
+            src="images/storylines-8.jpg"
             alt="View full size version of people looking at their phones while facing each other"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/storylines-9.png"
+            src="images/storylines-9.jpg"
             alt="View full size version of people laughing together"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/storylines-10.png"
+            src="images/storylines-10.jpg"
             alt="View full size version of one person telling another a story"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/storylines-11.png"
+            src="images/storylines-11.jpg"
             alt="View full size version of a close-up of two people's hands holding smartphones"
           />
         </button>
@@ -204,37 +204,37 @@
         </div>
         <div class="slide">
           <img
-            src="images/storylines-6.png"
+            src="images/storylines-6.jpg"
             alt="Two people talking, with one holding a phone with a prompt from the Storylines interface on it"
           />
         </div>
         <div class="slide">
           <img
-            src="images/storylines-7.png"
+            src="images/storylines-7.jpg"
             alt="One person talking to another person while they hold their phones up in front of their chests"
           />
         </div>
         <div class="slide">
           <img
-            src="images/storylines-8.png"
+            src="images/storylines-8.jpg"
             alt="Two people looking at their phones while facing each other. One of them presses a button on their screen"
           />
         </div>
         <div class="slide">
           <img
-            src="images/storylines-9.png"
+            src="images/storylines-9.jpg"
             alt="Two people laughing together while holding their phones"
           />
         </div>
         <div class="slide">
           <img
-            src="images/storylines-10.png"
+            src="images/storylines-10.jpg"
             alt="One person telling another a story to another, while pointing upwards. Both have their phones in front of them"
           />
         </div>
         <div class="slide">
           <img
-            src="images/storylines-11.png"
+            src="images/storylines-11.jpg"
             alt="Close-up of two people's hands holding smartphones with the game interface open on them. One screen states, 'New constellation!' with a graphic of a swan constellation underneath the text. The other phone has a list of collected constellations of the user"
           />
         </div>
