--- a/debug-log.html
+++ b/debug-log.html
@@ -104,25 +104,25 @@
         </button>
         <button class="zoomable">
           <img
-            src="images/debug-7.png"
+            src="images/debug-7.jpg"
             alt="View full size version of gameplay with screen glitching"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/debug-8.png"
+            src="images/debug-8.jpg"
             alt="View full size version of screen glitching at end of game"
           />
         </button>
         <button class="zoomable">
           <img
-            src="images/debug-9.png"
+            src="images/debug-9.jpg"
             alt="View full size version of ending screen with scores, with the text 'Safe to Eject'"
           />
         </button>
         <button class="zoomable gi-full">
           <img
-            src="images/debug-hero.png"
+            src="images/debug-hero.jpg"
             alt="View full size version of Debug.Log arcade cabinet"
           />
         </button>
@@ -190,25 +190,25 @@
         </div>
         <div class="slide">
           <img
-            src="images/debug-7.png"
+            src="images/debug-7.jpg"
             alt="Screen glitching with rainbow colors, with black silhouettes of enemies over top. The scores at the top of the screen read 'P1: 530' and 'P2: 530'. At the bottom is the time countdown, reading, 'Automatic Unplug: 004'"
           />
         </div>
         <div class="slide">
           <img
-            src="images/debug-8.png"
+            src="images/debug-8.jpg"
             alt="Screen glitching with blue colors at the end of the game. The scores at the top of the screen read 'P1: 440' and 'P2: 570'. At the bottom is the time countdown, reading, 'Automatic Unplug: 000'"
           />
         </div>
         <div class="slide">
           <img
-            src="images/debug-9.png"
+            src="images/debug-9.jpg"
             alt="Ending screen with scores 550 for player one and 530 for player two, with the text 'Safe to Eject' in the center. Below is the text, 'Manual purge successful; Safely ejecting software. Please wait_'. At the bottom of the screen is the text 'Press A to troubleshoot'"
           />
         </div>
         <div class="slide">
           <img
-            src="images/debug-hero.png"
+            src="images/debug-hero.jpg"
             alt="Arcade cabinet with the game Debug.Log on the screen. The cabinet has two arcade sticks with buttons and headphones, and two stools sitting in front."
           />
         </div>
