--- a/interplay.html
+++ b/interplay.html
@@ -31,7 +31,7 @@
       <div class="project-subtitle">
         Made with: Processing 3.0, Spacebrew, Kinect v1, and projector
       </div>
-      <video class="main-image" poster="./images/interplay-poster.png" controls>
+      <video class="main-image" poster="./images/interplay-poster.jpg" controls>
         <source src="./videos/interplay.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
